--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
   justify-content: center;
   height: 100vh;
   align-items: center;
+  flex-wrap: wrap;
 }
 
 .firstborn {
@@ -82,10 +83,5 @@ button {
   border-color: hsla(0, 0%, 100%, 0.75);
   cursor: pointer;
 }
-@media screen and (max-width: 350px) {
-  .parent {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-  }
+@media screen and (max-width: 400px) {
 }
