working on my css

--- a/style.css
+++ b/style.css
@@ -84,4 +84,9 @@ button {
   cursor: pointer;
 }
 @media screen and (max-width: 400px) {
+  .parent {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+  }
 }
